--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-*{
+/* Common Styles */
+* {
     margin: 0;
     font-family: Arial;
-    border: border-box;
+    box-sizing: border-box;
 }
+
+/* Responsive Styles */
 @media (max-width: 768px) {
     .navbar {
         flex-direction: column;
+        height: auto;
     }
+
     .navigation-logo,
     .nav-address,
     .nav-search,
@@ -17,88 +22,101 @@
         width: 100%;
         margin-bottom: 1rem;
     }
+
     .panel-all,
     .panel-ops,
     .panel-deals {
         width: 100%;
         margin-bottom: 1rem;
     }
+
     .customer-section {
-        grid-template-columns: repeat(1, 1fr);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
+
     .box {
         width: 100%;
         margin-bottom: 1rem;
     }
+
     .box-img {
         height: 200px;
     }
 }
 
-.navbar{
+/* Desktop Styles */
+.navbar {
     height: 60px;
-    background-color:#0f1111 ;
+    background-color: #0f1111;
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-
 }
-.navigation-logo{
+
+.navigation-logo {
     height: 50px;
     width: 100px;
-
 }
-.logo{
+
+.logo {
     background-image: url("amazon_logo.png");
     height: 50px;
     width: 100%;
     background-size: cover;
 }
-.border{
+
+.border {
     border: 1.5px solid transparent;
 }
-.border:hover{
+
+.border:hover {
     border: 1.5px solid white;
 }
-.add-first{
+
+.add-first {
     color: #cccccc;
     font-size: 0.85rem;
     margin-left: 15px;
-
-} 
-.add-second{
-font-size: 1rem;
-margin-left: 3px;
 }
-.add-icon{
+
+.add-second {
+    font-size: 1rem;
+    margin-left: 3px;
+}
+
+.add-icon {
     display: flex;
     align-items: center;
 }
-.nav-search{
+
+.nav-search {
     display: flex;
     justify-content: space-evenly;
-    width: 620px; 
+    width: 620px;
     height: 40px;
-    border: radius 4px; 
+    border-radius: 4px;
 }
-.search-select{
+
+.search-select {
     background-color: #f3f3f3;
     width: 50px;
     text-align: center;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border: none;
-
 }
-.search-input{
+
+.search-input {
     width: 100%;
-    font: size 1rem;
+    font-size: 1rem;
     border: none;
     font-family: inherit;
-
 }
-.search-icon{
+
+.search-icon {
     width: 50px;
     display: flex;
     justify-content: center;
@@ -109,66 +127,69 @@ margin-left: 3px;
     border-bottom-right-radius: 4px;
     color: #0f1111;
 }
-span{
-    font-size: 0.7rem;
 
+span {
+    font-size: 0.7rem;
 }
-.nav-search:hover{
+
+.nav-search:hover {
     border: 2px solid #febd68;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-radius: 4px;
 }
-.nav-second{
+
+.nav-second {
     font-size: 0.85rem;
     font-weight: 800;
 }
-.nav-cart i{
-    font-size: 30px;
 
+.nav-cart i {
+    font-size: 30px;
 }
-.nav-cart{
-    font: 0.85rem;
+
+.nav-cart {
+    font-size: 0.85rem;
     font-weight: 700;
 }
-.nav-country{
+
+.nav-country {
     font-size: 0.85rem;
     font-weight: 800;
 }
-.panel{
+
+.panel {
     height: 40px;
     background-color: #222f3d;
     display: flex;
     color: white;
     align-items: center;
-    justify-content: space-evenly;
-
+   justify-content: space-evenly;
 }
-.panel-ops p{
+
+.panel-ops p {
     display: inline;
     margin-left: 15px;
 }
-.panel-ops{
+
+.panel-ops {
     width: 70%;
     font-size: 0.85rem;
 }
-.panel-deals{
+
+.panel-deals {
     font-size: 0.9rem;
     font-weight: 700;
-
 }
-.hero-section{
-    background-image: url("amazon-great-indian-festival-sale-2022-live-updates.webp");
+
+.hero-section {
+    background-image: url("amazon-great-indian-festival-sale-2022.webp");
     background-size: cover;
     height: 300px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-
-
 }
-.hero-msg{
+
+.hero-msg {
     background-color: white;
     color: black;
     height: 40px;
@@ -179,39 +200,47 @@ span{
     width: 80%;
     margin-bottom: 30px;
 }
-.hero-msg a{
-    color:#007185 ;
+
+.hero-msg a {
+    color: #007185;
 }
-.customer-section{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+
+.customer-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
     background-color: #e2e7e6;
 }
-.box{
+
+.box {
     height: 400px;
-    width: 23%;
+    width: 100%;
     background-color: white;
     padding: 20px 0px 15px;
     margin-top: 15px;
 }
-.box-img{
+
+.box-img {
     height: 300px;
     background-size: cover;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
-.box-content{
+
+.box-content {
     margin-left: 1rem;
     margin-right: 1rem;
 }
-.box-content p{
-    color:#007185;
+
+.box-content p {
+    color: #007185;
 }
-.footer{
+
+.footer {
     margin-top: 15px;
 }
-.foot-panel1{
+
+.foot-panel1 {
     background-color: #37475a;
     color: white;
     height: 50px;
@@ -220,25 +249,31 @@ span{
     align-items: center;
     font-size: 0.85rem;
 }
-.foot-panel2{
-    background-color:#222f3d;
-    color: white;
-    height: 500px;
-    display: flex;
-    justify-content: space-evenly;
 
+.foot-panel2 {
+    background-color: #222f3d;
+    color: white;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 1rem;
 }
-ul{
+
+ul {
     margin-top: 20px;
+    list-style-type: none;
+    padding-left: 0;
 }
-ul a{
+
+ul a {
     display: block;
     font-size: 0.85rem;
     margin-top: 10px;
     color: #dddddd;
-
 }
-.foot-panel3{
+
+.foot-panel3 {
     background-color: #222f3d;
     color: white;
     border-top: 0.5px solid white;
@@ -247,25 +282,26 @@ ul a{
     justify-content: center;
     align-items: center;
 }
-.logo{
+
+.logo {
     background-image: url("amazon_logo.png");
     height: 50px;
     background-size: cover;
     width: 100px;
-
 }
-.foot-panel4{
-    background-color:#0f1111 ;
+
+.foot-panel4 {
+    background-color: #0f1111;
     color: white;
     height: 80px;
-    font-size:0.7rem;
+    font-size: 0.7rem;
     text-align: center;
 }
-    
-.pages{
-    
+
+.pages {
     padding-top: 25px;
 }
+
 .copyright{
         
         padding-top: 5px;
